# cardheroagentpoc

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  ONBOARD.md  README.md  cardheroagentpoc.txt  pyproject.toml
agent/: checkout.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/: config.py  database.py  main.py  monitor.py  seed.py  sentiment.py
backend/backend/: config.py  monitor.py  seed.py  sentiment.py
backend/integrations/: collectr.py
backend/seeds/: history.json  want_list.json
docs/superpowers/plans/: 2026-04-18-repo-restructure.md  2026-04-18-web-push-notifications.md
docs/superpowers/specs/: 2026-04-18-repo-restructure-design.md  2026-04-18-web-push-notifications-design.md
frontend/: tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: BudgetCard.tsx  PortfolioCard.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Deals.tsx  Overview.tsx  Voice.tsx
newpoc/: .env.example  CLAUDE.md  Dockerfile  test_pipeline.py
newpoc/agent/: checkout.ts  collectr_import.ts  package.json
newpoc/backend/: database.py  main.py  monitor.py  seed.py
newpoc/backend/integrations/: collectr.py
newpoc/lab/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.ts
newpoc/lab/public/: sw.js
newpoc/lab/src/: App.tsx  index.css  main.tsx
newpoc/lab/src/components/: DealCard.tsx  StatusBadge.tsx  WantListCard.tsx
newpoc/lab/src/lib/: api.ts  notifications.ts  utils.ts
tests/: conftest.py  test_api.py  test_push_notifications.py
(+6 files in other folders)
